<resources>
    <string name="app_name">Whatsapp UI</string>
    <string name="title">WhatsApp</string>
    <string name="tab_layout_one"> Chat </string>
    <string name="tab_layout_two"> Calls </string>
    <string name="tab_layout_three"> Status </string>
    <string name="user_name">Moein</string>
    <string name="user_message">Hey There! Are you using whatsapp?</string>
    <string name="user_chat_time">08:58</string>
    <string name="chat_alert">2</string>
    <string name="new_message">New Message</string>
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="status_upload_time">Two Hours ago</string>
    <string name="call_date">January 22, 7:46 PM</string>
    <string name="message_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>