<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="vertical"
    android:layout_marginTop="6dp"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_base_status"
            android:rotation="-90"
            android:layout_marginStart="16dp"
            android:layout_gravity="start|center_vertical"
            />

        <LinearLayout
            android:id="@+id/linearLayoutChat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            android:layout_gravity="start|center_vertical"
            >

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="12dp"
                />

            <TextView
                android:id="@+id/profileMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_message"
                android:textSize="14sp"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginTop="4dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutChatInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:id="@+id/chatTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_chat_time"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/chatAlert"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_circle"
                app:backgroundTint="?attr/colorPrimaryVariant"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/chat_alert"
                android:textColor="?attr/colorOnPrimary"
                />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>